--- a/app-movil/EscuelaSinBullying/package.json
+++ b/app-movil/EscuelaSinBullying/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "install": "^0.13.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-config": "^1.4.11",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-sqlite-storage": "^6.0.1"
