--- a/.gitignore
+++ b/.gitignore
@@ -4,33 +4,33 @@
 
 # Xcode
 #
-app-movil/EscuelaSinBullying/build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-app-movil/EscuelaSinBullying/ios/.xcode.env.local
+/app-movil/EscuelaSinBullying/build/
+/*.pbxuser
+/!default.pbxuser
+/*.mode1v3
+/!default.mode1v3
+/*.mode2v3
+/!default.mode2v3
+/*.perspectivev3
+/!default.perspectivev3
+/xcuserdata
+/*.xccheckout
+/*.moved-aside
+/DerivedData
+/*.hmap
+/*.ipa
+/*.xcuserstate
+/app-movil/EscuelaSinBullying/ios/.xcode.env.local
 
 # Android/IntelliJ
 #
-app-movil/EscuelaSinBullying/build/
-.idea
-.gradle
-local.properties
+/app-movil/EscuelaSinBullying/build/
+/app-movil/EscuelaSinBullying/.idea
+/app-movil/EscuelaSinBullying/.gradle
+/app-movil/EscuelaSinBullying/local.properties
 *.iml
 *.hprof
-.cxx/
+/app-movil/EscuelaSinBullying/.cxx/
 
 # node.js
 #
